Pushing site content to git

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: SPiN NYC
+email: trisha.hadley@gmail.com
+description: "SPiN NYC Booking Form"
+baseurl: /
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -12,20 +13,16 @@ color:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com/spinpong
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+    url: https://www.facebook.com/SPiNNewYork
+  - title: instagram
+    url: http://instagram.com/spinnewyork
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 48 E 23rd St
+  - line: New York, NY 10010
 
 # Build settings
 markdown: kramdown
